<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    tools:context=".SettingActivity">

    <ScrollView
        android:id="@+id/layout_scroll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="12dp"
                android:text="@string/string_preference"
                android:textAlignment="viewStart"
                android:textAllCaps="true"
                android:textColor="?android:attr/colorAccent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_video_resolution"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvResolution"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:textColor="@color/color_black" />

                <Spinner
                    android:id="@+id/spinnerResolution"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_video_orientation"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvOrientation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:textColor="@color/color_black" />

                <Spinner
                    android:id="@+id/spinnerOrientation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignParentLeft="true"
                    android:gravity="center_vertical"
                    android:text="@string/string_setting_bitrate" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignParentRight="true"
                    android:focusableInTouchMode="true">

                    <EditText
                        android:id="@+id/videoBitrate"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:inputType="number"
                        android:text="8" />


                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center_vertical"
                        android:text="@string/string_setting_mbps" />
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="left"
                    android:text="@string/string_setting_audio"
                    android:textSize="16sp" />

                <Switch
                    android:id="@+id/audio"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end" />
            </LinearLayout>

            <!--  <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">

                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="match_parent"
                      android:layout_gravity="left"
                      android:text="Show Count Down"
                      android:textSize="16sp" />

                  <Switch
                      android:id="@+id/showCountdown"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:gravity="end" />
              </LinearLayout> -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="left"
                    android:text="@string/string_setting_touch"
                    android:textSize="16sp" />

                <Switch
                    android:id="@+id/showTouch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>


            <!--<LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="File Save: SDcard/"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/videoName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="GPcapture" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=".mp4"
                    android:textSize="16sp" />
            </LinearLayout>
        -->
            <!--     <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:orientation="vertical"
                 android:padding="5dp">

             <Button
                     android:id="@+id/buttonStartRecord"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="start"
                     android:textAllCaps="true" />

                 <Button
                     android:id="@+id/buttonStopRecord"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="stop"
                     android:textAllCaps="true" />
             </LinearLayout>
        -->

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:visibility="visible">

        <RelativeLayout
            android:id="@+id/layout_ads_main_screen_nl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@android:color/transparent"></RelativeLayout>

    </LinearLayout>

</RelativeLayout>